--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,7 +23,7 @@ nav ul li {
 
 nav ul a,
 nav .brand-logo {
-  color: #444;
+  color: #626262;
   padding-top: 20px;
   text-shadow: -4px -4px 29px rgba(255, 255, 255, 1);
 }
@@ -45,6 +45,11 @@ nav .brand-logo {
   font-weight: 600;
   text-transform: uppercase;
   font-size: 1.5rem;
+}
+
+.brand-logo span {
+  border-bottom: 1px dashed rgba(0, 0, 0, 0.5);
+  color: #000;
 }
 
 nav ul li.on,
